# verificarlo

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-16.04  Dockerfile-18.04  Dockerfile.clang  Makefile.am  README.md  autogen.sh  compile_commands.json  configure.ac  docker-compose.test-16.04.yml  docker-compose.test.yml  lgtm.yml  pyproject.toml  rand.c  requirements.txt  verificarlo-c  verificarlo-c++  verificarlo-f  verificarlo.in.in
.github/workflows/: ccpp.yml  codecov.yml  main.yml  test-docker.yml
doc/: 02-Backends.md  07-Interflop-usercall-instrumentation.md
m4/: ax_llvm.m4
postprocess/veritracer/: Makefile.am  setup.py
src/: Makefile.am  vfc_ddebug
src/backends/: Makefile.am
src/backends/interflop-backend-bitmask/: interflop_bitmask.c  interflop_bitmask.h
src/backends/interflop-backend-prism/: interflop_prism.c
src/backends/interflop-backend-vprec/: interflop_vprec.c  interflop_vprec.h
src/backends/interflop-backend-vprec/common/: vprec_tools.c
src/backends/interflop-bitmask/: interflop_bitmask.c
src/backends/interflop-cancellation/: interflop_cancellation.c
src/backends/interflop-ieee/: Makefile.am  interflop_ieee.c
src/backends/interflop-mca/: interflop_mca.c
src/backends/interflop-mca-int/: Makefile.am  interflop_mca_int.c
src/backends/interflop-mca-mpfr/: interflop_mca_mpfr.c
src/backends/interflop-vprec/: interflop_vprec.c
src/common/: float_const.h  float_struct.h  float_utils.h  generic_builtin.h  interflop.h  logger.c  options.c  options.h  printf_specifier.c
src/libbitmask/: bitmasklib.c
src/libvfcfuncinstrument/: libVFCFuncInstrument.cpp
src/libvfcinstrument/: Common.hxx  Makefile.am  libVFCInstrument.cpp
src/libvfcinstrumentonline/: Makefile.am  libVFCInstrumentOnline.cpp  rand.c  rand.cpp  shishua.h  vector_types.h  xoroshiro128+.hpp
src/libvfcinstrumentonline/rand/: .bazelrc  MODULE.bazel  build-ir.sh  compile.sh  test.cpp  test.sh
src/libvfcinstrumentonline/rand/app/: main.cpp
src/libvfcinstrumentonline/rand/src/: BUILD  check_uniform_distribution.py  debug.hpp  debug_hwy-inl.h  debug_hwy.hpp  eft.hpp  export_symbols.hpp  main.cpp  main.hpp  rand.hpp  random-inl.h  sr.h  sr.hpp  sr_avx.hpp  sr_avx2.hpp  sr_hw-inl.h  sr_hw.cpp  sr_hw.h  sr_hw.hpp  sr_sse4-2.hpp  target-utils.h  test_sr_hw-API.cpp  test_sr_hw.cpp  ud.h  ud.hpp  ud_hw-inl.h  ud_hw.cpp  ud_hw.h  utils.hpp  vector_types.h  vector_types.hpp  xoroshiro128+.cpp  xoroshiro128+.hpp  xoroshiro256+.hpp  xoroshiro256+_hw-inl.hpp  xoroshiro256+_hw.cpp  xoroshiro256+_hw.h  xoroshiro256+_hw.hpp
src/libvfcinstrumentonline/rand/src/inputs_test_generator/: Makefile  test  test.cpp  test.sh  test_double  test_float
src/libvfcinstrumentonline/rand/tests/: BUILD  get_exponent_test.cpp  get_pow2_test-hw.cpp  get_pow2_test.cpp  get_predabs_test.cpp  helper.hpp  macros.bzl  pprint.py  sr_hw_test.cpp  srround.cpp  srround_test.cpp  srround_test_hw-inl.cpp  srround_test_hw.cpp  srround_test_x2.cpp  test.c  test_get_exponent.cpp  test_get_pow2.cpp  test_single_sr.cpp  test_single_sr_hwy.cpp  test_single_ud.cpp  test_sr_accuracy.cpp  test_sr_hw-API.cpp  test_sr_hwy_accuracy.cpp  test_sr_hwy_performance.cpp  test_twosum.cpp  test_ud_accuracy.cpp  test_ud_hwy_accuracy.cpp  test_ud_hwy_performance.cpp  test_xoroshiro.cpp  twoprodfma_test.cpp  twosum_test.cpp  udround_test.cpp  xoroshiro.cpp
src/libvfcinstrumentprism/: Makefile.am  libVFCInstrumentPRISM.cpp
src/libvfcreport/: Makefile.am  libVFCReport.cpp
src/libvfctracer/: libtracer.cpp  opcode.cpp  opcode.hxx  vfctracer.cpp  vfctracer.hxx
src/libvfctracer-probe/: libtracer-probe.cpp  vfctracer-probe.h
src/vfcwrapper/: Makefile.am  backends.c  backends.h  funcinstr.c  funcinstr.h  main.c  main.c.in  operation_amd.h  operation_arm.h  operation_x86.h  operator.h  vector_ext.h  vfctracer.c  vfcwrapper.c  vfcwrapper.h
tests/: test.sh
tests/test_absoluteError/: test_additive.c  test_generative.c
tests/test_bitmask_backend/: clean.sh  compute_error.sh  quadmath_stats.c  test.c  test.sh
tests/test_branch_instrumentation/: test.c  test.sh
tests/test_cancellation/: test_double.c  test_float.c
tests/test_daz_ftz/: test.sh
tests/test_ddebug_gen_include/: test.c
tests/test_ddebug_integration/: Makefile  integrate.hxx
tests/test_debug_print/: generate.py  test.c  test.sh
tests/test_ffastmath/: test.c
tests/test_fix_seed/: test.c
tests/test_fortran/: test.sh  test.sh.in
tests/test_fortran_NAS/: test.sh
tests/test_fortran_vfc_probes/: test.sh
tests/test_fp80/: rotg.c
tests/test_handle_call/: test.c  test.sh
tests/test_ieee_backend_debug_binary/: test.c
tests/test_include_exclude/: a.c  test.sh
tests/test_isa_dispatch/: test.c  test.sh
tests/test_kahan/: kahan.c  test.sh
tests/test_linear_system_kahan/: linear.c
tests/test_mca_backends/: test.c
tests/test_new_pm_args/: clean.sh
tests/test_online_instrumentation/: Makefile  check_variability.py  clean.sh  include-functions.txt  test.c  test.sh  test_scalar.sh  test_vector.c  test_vector.sh
tests/test_online_instrumentation_sr/: Makefile  check_status.py  check_variability.py  clean.sh  count_dist.py  exclude-functions.txt  perf.sh  test.c  test.sh  test_fma.c  test_local.c  test_local.sh  test_scalar.sh  test_vector.c  test_vector.sh
tests/test_per_function/: test.c
tests/test_prism_backend/: Makefile  check_variability.py  test_scalar.sh  test_vector.sh
tests/test_prism_backend_integration/: Makefile  clean.sh  test.c  test.sh
tests/test_prism_virtual_precision/: Makefile  clean.sh  include-functions.txt  test.sh  test_accuracy.cpp
tests/test_report/: test.sh
tests/test_rr_mode_exact/: rr_mode.c
tests/test_save_temps_option/: test.c
tests/test_shell_expansion/: test.c
tests/test_tchebychev/: tchebychev.c  test.sh
tests/test_tracer/: functions_to_inst_C.txt  muller.c  test.sh
tests/test_tracer_analyze/: test.c  test.sh
tests/test_tracer_fortran/: functions_to_inst_FORTRAN.txt  test.sh  test.sh.in
tests/test_tracer_launch/: test.sh
tests/test_tracer_plot/: test.sh
verification/: interflop_mca.why
(+129 files in other folders)
