###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# MODULE.bazel
module(
    name = "sr",
    version = "0.0.1",
)

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "rules_license", version = "0.0.7")
bazel_dep(name = "googletest", version = "1.15.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.10")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "hwy",
#     urls = ["https://github.com/google/highway/archive/refs/tags/1.2.0.zip"],
#     integrity = "sha256-fbtKAGj5hhhBr5Bggtsrj4aIodC2OHb1njB8LGfom8A=",
#     strip_prefix = "highway-1.2.0",
# )

# Use my version of highway with Print format option
# Command to generate integrity: 
# > openssl dgst -sha256 -binary highway-1.2.0.zip | openssl base64 -A | sed 's/^/sha256-/'
http_archive(
    name = "hwy",
    urls = ["https://github.com/yohanchatelain/highway/archive/refs/tags/1.2.0.zip"],
    integrity = "sha256-/azCSSQVu3gjymk4oVmpKB6dKkNMtUxSH6xstU10x48=",
    strip_prefix = "highway-1.2.0",
)


# Boost
# Famous C++ library that has given rise to many new additions to the C++ Standard Library
# Makes @boost available for use: For example, add `@boost//:algorithm` to your deps.
# For more, see https://github.com/nelhage/rules_boost and https://www.boost.org
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = "https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz",
    strip_prefix = "rules_boost-master",
    # It is recommended to edit the above URL and the below sha256 to point to a specific version of this repository.
    # integrity = "sha256-...",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)
